--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,23 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.json</groupId>
+          <artifactId>JSON-java</artifactId>
+        <version>1.0.0</version>
+      </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <version>2.4</version>
+      <classifier>jdk15</classifier><!--指定jdk版本-->
+    </dependency>
   </dependencies>
 
   <build>
