--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,27 @@
       <artifactId>core</artifactId>
       <version>3.3.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>3.3.0</version>
+    </dependency>
     <dependency>
       <groupId>com.kk</groupId>
       <artifactId>QRCode</artifactId>
       <version>1.0.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.9</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4</version>
     </dependency>
   </dependencies>
 
