--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,18 @@
       <artifactId>mail</artifactId>
       <version>1.4</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.googlecode.ictclas4j/ictclas4j -->
+    <dependency>
+      <groupId>com.googlecode.ictclas4j</groupId>
+      <artifactId>ictclas4j</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
